<resources>
    <string name="app_name">YDRN</string>
    <string name="play">PLAY</string>
    <string name="current_heading">CURRENT HEADING</string>
    <string name="target_heading">TARGET HEADING</string>
    <string name="current">0</string>
    <string name="target">0</string>
    <string name="level">LEVEL: 0</string>
    <string name="turn">TURN: 0</string>
    <string name="cargo">CARGO LEFT: 0</string>
    <string name="deck">CARDS LEFT: 0</string>
    <string name="nextTurn">NEXT TURN</string>
    <string name="toShop">TO SHOP</string>
    <string name="concede">CONCEDE</string>
    <string name="cost">COST: 0</string>
    <string name="nextLevel">NEXT LEVEL</string>
    <string name="credits">A GAME BY DANIEL, EE SONG, JEAN, KAELEN, SAIF, SIEW HEAN\nAPP BY EE SONG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>