<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="horizontal"
    tools:context=".GameFragment">

    <View
        android:id="@+id/view"
        android:layout_width="659dp"
        android:layout_height="170dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/transparent_rectangle"
        android:foregroundGravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/card3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        />

    <ImageView
        android:id="@+id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-10dp"
        android:scaleType="centerInside"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/card3"
        app:layout_constraintEnd_toStartOf="@+id/card2"
        app:layout_constraintTop_toTopOf="@+id/card3" />

    <ImageView
        android:id="@+id/card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-10dp"
        android:scaleType="centerInside"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/card3"
        app:layout_constraintEnd_toStartOf="@+id/card3"
        app:layout_constraintTop_toTopOf="@+id/card3" />

    <ImageView
        android:id="@+id/card5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:scaleType="centerInside"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/card3"
        app:layout_constraintStart_toEndOf="@+id/card4"
        app:layout_constraintTop_toTopOf="@+id/card3" />

    <ImageView
        android:id="@+id/card4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:scaleType="centerInside"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/card3"
        app:layout_constraintStart_toEndOf="@+id/card3"
        app:layout_constraintTop_toTopOf="@+id/card3" />

    <TextView
        android:id="@+id/currentHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/lores"
        android:gravity="center"
        android:text="@string/current_heading"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/targetHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="185dp"
        android:fontFamily="@font/lores"
        android:gravity="center"
        android:text="@string/target_heading"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lores"
        android:text="@string/level"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <TextView
        android:id="@+id/turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lores"
        android:text="@string/turn"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/level" />

    <TextView
        android:id="@+id/cargoLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lores"
        android:text="@string/cargo"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view" />

    <TextView
        android:id="@+id/cardsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lores"
        android:text="@string/deck"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/cargoLeft" />

    <Button
        android:id="@+id/nextTurn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:fontFamily="@font/lores"
        android:text="@string/nextTurn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tryAgain"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="131dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="@font/lores"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/concede"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lores"
        android:text="@string/current"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/currentHeading"
        app:layout_constraintEnd_toEndOf="@+id/currentHeading"
        app:layout_constraintStart_toStartOf="@+id/currentHeading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lores"
        android:text="@string/target"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/targetHeading"
        app:layout_constraintEnd_toEndOf="@+id/targetHeading"
        app:layout_constraintStart_toStartOf="@+id/targetHeading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>